# Specify the build system for the project.
[build-system]
requires = ["sip >=6, <7", "PyQt-builder >=1.9, <2"]
build-backend = "sipbuild.api"

# Specify the PEP 566 metadata for the project.
[tool.sip.metadata]
name = "PyQt6-QtWebKit"
version = "6.6.0"
summary = "Python bindings for the QtWebKit framework"
home-page = "https://www.riverbankcomputing.com/software/pyqt/"
author = "Riverbank Computing Limited"
author-email = "info@riverbankcomputing.com"
license = "GPL v3"
description-file = "README"
requires-dist = "PyQt6 (>=6.2.0)"

# Specify a PyQt-based project.
[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

# Configure the project.
[tool.sip.project]
tag-prefix = "QtWebKit"

# Define and configure each set of bindings.
[tool.sip.bindings.QtWebKit]
qmake-QT = ["webkit"]

[tool.sip.bindings.QtWebKitWidgets]
qmake-QT = ["webkitwidgets"]
